Archive2/26/0b834a9c2f9d64/output
main.cpp:5:20: error: expected ';' in 'for' statement specifier
    for (int i = 5 : {1, 2, 3})
                   ^
main.cpp:5:20: error: expected expression
2 errors generated.
